--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiohttp==3.6.2
+apiclient==1.0.4
 async-timeout==3.0.1
 attrs==19.3.0
 beautifulsoup4==4.8.1
@@ -11,7 +12,9 @@ ffmpeg-python==0.2.0
 Flask==1.1.1
 future==0.18.2
 google-api-core==1.14.3
+google-api-python-client==1.7.11
 google-auth==1.7.1
+google-auth-httplib2==0.0.3
 google-cloud-core==1.1.0
 google-cloud-datastore==1.10.0
 google-cloud-language==1.3.0
@@ -22,11 +25,13 @@ google-images-download==2.8.0
 google-resumable-media==0.5.0
 googleapis-common-protos==1.6.0
 grpcio==1.25.0
+httplib2==0.15.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
 multidict==4.7.2
+oauth2client==4.1.3
 protobuf==3.11.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
@@ -36,6 +41,8 @@ rsa==4.0
 selenium==3.141.0
 six==1.13.0
 soupsieve==1.9.5
+uritemplate==3.0.1
 urllib3==1.25.7
 Werkzeug==0.16.0
 yarl==1.4.2
+youtube-dl==2019.12.25
